--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html><html lang="ru"><head> 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-wid1th, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">  
-<title>Free Download By Parad1st</title>
-<meta property="og:title" content="Free Download"> 
-<meta property="og:site_name" content="Free Download">
+<title>Школьник умер на мотоцикле </title>
+<meta property="og:title" content="ШОК НОВОСТИ!"> 
+<meta property="og:site_name" content="ШОК! НОВОСТИ">
 <meta property="og:image" content="images/Parad1st.png">
-<meta property="og:description" content="Free Download By Parad1st - скачать абсолютно бесплатно!"> 
+<meta property="og:description" content="Вы будете в шоке!"> 
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="photo">
 <meta name="twitter:title" content="Programm">
 <meta name="twitter:site" content="@fps_boost">
-<meta name="twitter:description" content="FREE!">
+<meta name="twitter:description" content="Школьник в Санкт-Петербурге разбился на мотоцикле в центр...">
 <meta name="twitter:image:src" content="Parad1st.png">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&amp;display=swap" rel="stylesheet">
@@ -162,7 +162,7 @@
 <div class="overlay-body">
 <p class="overlay-title">Cookies и сторонний контент</p>
 <p class="overlay-description">Этот сайт использует cookies что-бы собирать информацию об ошибках
-чтобы улучшить сайт и исправить ошибки. Приймите cookies для хорошей
+чтобы улучшить сайт и исправить ошибки. Примите cookies для хорошей
 оптимальной производительности.</p>
 <div class="overlay-buttons-wrapper">
 <div id="accept-button" class="overlay-button">Принять</div>
